--- a/Snake/index.html
+++ b/Snake/index.html
@@ -3,11 +3,18 @@
         <title>Snake Game</title>
         <style>
             canvas{
+                width:100%;
+                height:100%;
                 display: inline-block;
-                margin: 0px;
+                margin:0;
+                padding: 0px;
+                width:100%;
+        height:100%;
+        border:limegreen 15px solid;
+        box-sizing: border-box;
             }
         </style>
     </head>
-    <canvas id="snake" width="1800px" height="600px"></canvas>
+    <canvas id="snake" width="1280px" height="600px"></canvas>
     <script src="snake.js"></script>
 </html>
