--- a/Snake/index.html
+++ b/Snake/index.html
@@ -12,6 +12,7 @@
         height:100%;
         border:limegreen 15px solid;
         box-sizing: border-box;
+        background-color: black;
             }
         </style>
     </head>
