--- a/Snake/index.html
+++ b/Snake/index.html
@@ -14,6 +14,15 @@
                 box-sizing: border-box;
                 background-color: black;
             }
+            food{
+                width:10px;
+                height:10px;
+                display:inline-block;
+                background-color:red;
+                border:darkblue 1px solid;
+                margin:0;
+                padding: 0px;
+            }
         </style>
     </head>
     <canvas id="snake" width="1280px" height="600px"></canvas>
