--- a/Snake/index.html
+++ b/Snake/index.html
@@ -25,6 +25,6 @@
             }
         </style>
     </head>
-    <canvas id="snake" width="1280px" height="600px"></canvas>
+    <canvas id="snake" width=100% height=100%></canvas>
     <script src="snake.js"></script>
 </html>
