--- a/Snake/index.html
+++ b/Snake/index.html
@@ -3,13 +3,9 @@
         <title>Snake Game</title>
         <style>
             canvas{
-                width:100%;
-                height:100%;
                 display: inline-block;
-                margin:0;
+                margin:0px;
                 padding: 0px;
-                width:100%;
-                height:100%;
                 border:limegreen 15px solid;
                 box-sizing: border-box;
                 background-color: black;
@@ -25,6 +21,7 @@
             }
         </style>
     </head>
-    <canvas id="snake" width=100% height=100%></canvas>
-    <script src="snake.js"></script>
+    <canvas id="snake"></canvas>
+    <script src="snake.js">
+    
 </html>
