--- a/Snake/index.html
+++ b/Snake/index.html
@@ -5,6 +5,8 @@
             canvas{
                 display: inline-block;
                 margin:0px;
+                height:100%;
+                width:100%;
                 padding: 0px;
                 border:limegreen 15px solid;
                 box-sizing: border-box;
