--- a/Snake/index.html
+++ b/Snake/index.html
@@ -5,8 +5,8 @@
             canvas{
                 display: inline-block;
                 margin:0px;
-                height:100%;
                 width:100%;
+                height:100%;
                 padding: 0px;
                 border:limegreen 15px solid;
                 box-sizing: border-box;
@@ -24,6 +24,6 @@
         </style>
     </head>
     <canvas id="snake"></canvas>
-    <script src="snake.js">
+    <script src="snake.js"></script>
     
 </html>
