--- a/Snake/index.html
+++ b/Snake/index.html
@@ -18,7 +18,7 @@
                 display:inline-block;
                 background-color:red;
                 border:darkblue 1px solid;
-                margin:0;
+                margin:0px;
                 padding: 0px;
             }
         </style>
