--- a/Snake/index.html
+++ b/Snake/index.html
@@ -24,6 +24,7 @@
         </style>
     </head>
     <canvas id="snake"></canvas>
+    <canvas id="food"></canvas>
     <script src="snake.js"></script>
     
 </html>
