--- a/Snake #2/web.html
+++ b/Snake #2/web.html
@@ -1,11 +1,13 @@
-<html long="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Snake</title>
-        <script>require=()=>({}); module={}; module.exports=()>({})</script>
-        </head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Snake</title>
+    <link rel="stylesheet" href="web.css">
+    <script>require=()=>({}); module={}; module.exports=()=>({})</script>
+  </head>
   <body>
-    <canvas id="canvas" width="700" height="500"></canvas>
+    <canvas id="canvas" width="100px" height="100px"></canvas>
     <script src="base.js"></script>
     <script src="snake.js"></script>
     <script src="web.js"></script>
