--- a/Snake #2/web.html
+++ b/Snake #2/web.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Snake</title>
+    <style>
+        snake{
+            border:white 1px solid;
+        }
+    </style>
     <link rel="stylesheet" href="web.css">
     <script>require=()=>({}); module={}; module.exports=()=>({})</script>
   </head>
   <body>
-    <canvas id="canvas" width="100px" height="100px"></canvas>
+    <canvas id="canvas" width="1275px" height="665px"></canvas>
     <script src="base.js"></script>
     <script src="snake.js"></script>
     <script src="web.js"></script>
