--- a/Snake #2/web.html
+++ b/Snake #2/web.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Snake</title>
     <style>
-        snake{
+       var snake{
             border:white 1px solid;
         }
     </style>
@@ -12,7 +12,7 @@
     <script>require=()=>({}); module={}; module.exports=()=>({})</script>
   </head>
   <body>
-    <canvas id="canvas" width="1275px" height="665px"></canvas>
+    <canvas id="canvas" width="1254px" height="635px" color="white" style="border:15px solid #FF0000;"></canvas>
     <script src="base.js"></script>
     <script src="snake.js"></script>
     <script src="web.js"></script>
